--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,16 +23,16 @@ jobs:
       run: dotnet publish -c Release -o ./publish
 
     # 4. Копируем файлы на сервер (используем rsync для скорости)
-    - name: Deploy to Server
-      uses: burnett01/rsync-deploy@v6
+    - name: Deploy to Server (rsync)
+      uses: appleboy/rsync-action@v1.0.0
       with:
-        remote_host: ${{ secrets.SERVER_HOST }}
-        remote_user: ${{ secrets.SERVER_USER }}
-        remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
-        remote_port: ${{ secrets.SERVER_PORT }}
-        flags: -avz --delete # -a (архив), v (подробно), z (сжатие), --delete (удалить на сервере лишние файлы)
-        source: ./publish/ # Что копируем
-        target: /var/www/gdz-bot # Куда копируем
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USER }}
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: ${{ secrets.SERVER_PORT }}
+        source: ./publish/
+        target: /var/www/gdz-bot
+        options: -avz --delete
 
     # 5. Перезапускаем службу на сервере
     - name: Restart Service
