--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,10 @@ jobs:
         # Это заменяет ручной ввод "yes" при первом подключении
         ssh-keyscan -H -p ${{ secrets.SERVER_PORT }} ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
         
-    # 5. Копируем файлы на сервер (ручной rsync)
+    # НОВЫЙ ШАГ: Устанавливаем rsync
+    - name: Install rsync
+      run: sudo apt-get update && sudo apt-get install -y rsync
+
     # 5. Копируем файлы на сервер (ручной rsync)
     - name: Deploy to Server (rsync)
       run: |
