--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,8 +44,8 @@ jobs:
         # 1. Сначала устанавливаем rsync
         sudo apt-get update && sudo apt-get install -y rsync
         
-        # 2. Сразу же его используем
-        rsync -avz --delete \
+        # 2. Вызываем rsync по ПОЛНОМУ ПУТИ, чтобы обойти кэш PATH
+        /usr/bin/rsync -avz --delete \
           --exclude 'foxford_answers.db' \
           --exclude 'foxford_answers.db-wal' \
           --exclude 'foxford_answers.db-shm' \
