--- a/GDZ-Bot/GDZ-Bot.csproj
+++ b/GDZ-Bot/GDZ-Bot.csproj
@@ -11,5 +11,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="10.0.0-rc.2.25502.107" />
     <PackageReference Include="Telegram.Bot" Version="22.7.5" />
+	<PackageReference Include="DotNetZip" Version="1.16.0" />
   </ItemGroup>
 </Project>
